--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 subprojects {
     apply plugin: 'java'
+    
+    group = "org.tweetwallfx"
+    
     repositories {
         jcenter()
     }
@@ -48,12 +51,11 @@ project(":TweetWallFX-Devoxx"){
     apply plugin: "application"
     
     run {
-        main = "org.tweetwallfx.devoxx.Main"        
+        mainClassName = "org.tweetwallfx.devoxx.Main"        
         args = ["-oAuthFile", "MyOAuth.properties"]
     }
     
     task('debug', dependsOn: 'classes', type: JavaExec) {
-        main = "org.tweetwallfx.devoxx.Main"
         classpath = sourceSets.main.runtimeClasspath
         debug = true
     }    
@@ -70,12 +72,11 @@ project(":TweetWallFX-NetBeans"){
     apply plugin: "application"
     
     run {
-        main = "org.tweetwallfx.netbeans.Main"        
+        mainClassName = "org.tweetwallfx.netbeans.Main"        
         args = ["-oAuthFile", "MyOAuth.properties"]
     }
     
     task('debug', dependsOn: 'classes', type: JavaExec) {
-        main = "org.tweetwallfx.netbeans.Main"
         classpath = sourceSets.main.runtimeClasspath
         debug = true
     }    
