enabled Xlint:all when compiling and fixed warnings that have shown up because of that compiler option

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ subprojects {
     version = '1.0'
     jar {
         manifest.attributes provider: 'gradle'
-    } 
+    }
+    compileJava {
+        options.compilerArgs << "-Xlint:all"// << "-Xlint:deprecation"
+    }
 }
 
 project(":TweetWallFX-Core"){
