--- a/build.gradle
+++ b/build.gradle
@@ -34,16 +34,12 @@ subprojects {
             html.enabled = true
         }
     }
-    
-    tasks.withType(JavaExec) {
-        args "-oAuthFile", "MyOAuth.properties"
-    }
 }
 
-project (":TweetWallFX-CommandlineArguments") {
+project (":TweetWallFX-Configuration") {
     dependencies {
         compile group: 'org.netbeans.api', name: 'org-openide-util-lookup', version: 'RELEASE80'
-        compile group: "com.beust", name: "jcommander", version: "1.48"
+        compile group: "log4j", name: "log4j", version: "1.2.17"
     }
 }
 
@@ -57,10 +53,10 @@ project(":TweetWallFX-Tweet-Impl-Twitter4J") {
     dependencies {
         compile group: "org.twitter4j", name: "twitter4j-core", version: "4.0.3"
         compile group: "org.twitter4j", name: "twitter4j-stream", version: "4.0.3"
-        compile group: "com.beust", name: "jcommander", version: "1.48"
         compile group: "log4j", name: "log4j", version: "1.2.17"
         compile project(':TweetWallFX-Tweet-API')
-        compile project(':TweetWallFX-CommandlineArguments')
+        compile project(':TweetWallFX-Tweet-Impl-Twitter4J-OAuth')
+        compile project(':TweetWallFX-Configuration')
     }
 }
 
@@ -69,7 +65,7 @@ project(":TweetWallFX-Core"){
         compile group: "de.jensd", name: "fontawesomefx", version: "8.3"
         compile group: "log4j", name: "log4j", version: "1.2.17"
         compile project(':TweetWallFX-Tweet-API')
-        compile project(':TweetWallFX-CommandlineArguments')
+        compile project(':TweetWallFX-Configuration')
     }
 }
 
@@ -94,82 +90,60 @@ project(":TweetWallFX-Controls"){
 }
 
 project(":TweetWallFX-Devoxx"){
-    
     apply plugin: "application"
-    mainClassName = "org.tweetwallfx.devoxx.Main"
+    mainClassName = "org.tweetwallfx.generic.Main"
 
     tasks.withType(JavaExec) {
         main mainClassName
     }
 
     task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath = sourceSets.main.runtimeClasspath
+        classpath sourceSets.main.runtimeClasspath
         debug = true
     }
 
     dependencies {
-        compile project(':TweetWallFX-2D')
-        compile project(':TweetWallFX-Controls')
-        runtime project(':TweetWallFX-Tweet-Impl-Twitter4J')
+        compile project(':TweetWallFX-Generic2D')
+        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
     }
 }
 
 project(":TweetWallFX-NetBeans") {
-    
     apply plugin: "application"
     mainClassName = "org.tweetwallfx.generic.Main"
 
     tasks.withType(JavaExec) {
         main mainClassName
-        args "-title", "The JavaFX Tweetwall for NetBeans Day!"
-        args "-query", "#netbeans OR #netbeansday"
-        args "-stylesheet", file('src/main/resources/netbeans.css').toURI().toURL().toString()
-    }
-
-    run {
-        classpath project(':TweetWallFX-Tweet-Impl-Twitter4J').sourceSets.main.runtimeClasspath
     }
 
     task('debug', dependsOn: 'classes', type: JavaExec) {
         classpath sourceSets.main.runtimeClasspath
-        classpath project(':TweetWallFX-Tweet-Impl-Twitter4J').sourceSets.main.runtimeClasspath
         debug = true
     }
 
     dependencies {
         compile project(':TweetWallFX-Generic2D')
+        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
     }
-    
-    task('runWithTwitter4J', dependsOn:'run')
 }
 
 project(":TweetWallFX-JavaOne") {
-
     apply plugin: "application"
     mainClassName = "org.tweetwallfx.generic.Main"
 
     tasks.withType(JavaExec) {
         main mainClassName
-        args "-title", "The JavaFX Tweetwall for JavaOne!"
-        args "-query", "#javaone"
-        args "-stylesheet", file('src/main/resources/javaone.css').toURI().toURL().toString()
-    }
-
-    run {
-        classpath project(':TweetWallFX-Tweet-Impl-Twitter4J').sourceSets.main.runtimeClasspath
     }
 
     task('debug', dependsOn: 'classes', type: JavaExec) {
         classpath sourceSets.main.runtimeClasspath
-        classpath project(':TweetWallFX-Tweet-Impl-Twitter4J').sourceSets.main.runtimeClasspath
         debug = true
     }
 
     dependencies {
         compile project(':TweetWallFX-Generic2D')
+        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
     }
-    
-    task('runWithTwitter4J', dependsOn:'run')
 }
 
 project(":TweetWallFX-Generic2D") {
