treating warnings as errors enabled thus breaking future builds will break once warnings are generated by the compiler

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ subprojects {
 
     compileJava {
         options.compilerArgs << "-Xlint:all"
+        options.compilerArgs << "-Werror"
     } 
 
     findbugs {
