--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,5 @@ include ':javaone'
 project(":javaone").name = "TweetWallFX-JavaOne"
 include ':generic2d'
 project(":generic2d").name = "TweetWallFX-Generic2D"
+include ':embeddable'
+project(":embeddable").name = "TweetWallFX-Embeddable"
