--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,5 @@ include ':generic2d'
 project(":generic2d").name = "TweetWallFX-Generic2D"
 include ':embeddable'
 project(":embeddable").name = "TweetWallFX-Embeddable"
+include ':embeddabletest'
+project(":embeddabletest").name = "TweetWallFX-EmbeddableTest"
