do not implicitly create assemble task as it is part of standard base plugin. besides it is deprecated with gradle 3.0

--- a/build.gradle
+++ b/build.gradle
@@ -243,7 +243,7 @@ project(":TweetWallFX-Embeddable") {
         }
     }
 
-    task('assemble', dependsOn: 'copyToLib')
+    tasks.assemble.dependsOn tasks.copyToLib
 }
 
 description = 'TweetWallFX'
