--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,7 @@ project(":TweetWallFX-Core"){
     dependencies {
         compile group: "de.jensd", name: "fontawesomefx", version: "8.3"
         compile group: "log4j", name: "log4j", version: "1.2.17"
+        compile group: "com.vdurmont", name: "emoji-java", version: "3.1.3"
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Configuration')
     }
