--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,7 @@ project(":TweetWallFX-3D"){
 
 project(":TweetWallFX-Controls"){
     dependencies {
+         compile group: "javax.cache", name: "cache-api", version: "1.0.0"
          compile group: "org.ehcache", name: "ehcache", version: "3.3.0"
          compile project(':TweetWallFX-Core')
     }
