Implements #115 using Ehcache for mosaic images (#121)
* Adds ehcache based image cache

* Adds cache persistence and proper close on VM close

* Adds slf4j log4j binding to get ehcache log entries

--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,10 @@ project(":TweetWallFX-3D"){
 
 project(":TweetWallFX-Controls"){
     dependencies {
-        compile project(':TweetWallFX-Core')
+         compile group: "javax.cache", name: "cache-api", version: "1.0.0"
+         compile group: "org.ehcache", name: "ehcache", version: "3.3.0"
+         compile group: "org.slf4j", name: "slf4j-log4j12", version: "1.7.25"
+         compile project(':TweetWallFX-Core')
     }
 }
 
