--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,8 @@ subprojects {
 
 project (":TweetWallFX-Configuration") {
     dependencies {
-        compile group: "log4j", name: "log4j", version: "1.2.17"
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
     }
 }
 
@@ -63,7 +64,8 @@ project(":TweetWallFX-Tweet-Impl-Twitter4J") {
     dependencies {
         compile group: "org.twitter4j", name: "twitter4j-core", version: "4.0.6"
         compile group: "org.twitter4j", name: "twitter4j-stream", version: "4.0.6"
-        compile group: "log4j", name: "log4j", version: "1.2.17"
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Tweet-Impl-Twitter4J-OAuth')
         compile project(':TweetWallFX-Configuration')
@@ -73,7 +75,8 @@ project(":TweetWallFX-Tweet-Impl-Twitter4J") {
 project(":TweetWallFX-Core"){
     dependencies {
         compile group: "de.jensd", name: "fontawesomefx", version: "8.9"
-        compile group: "log4j", name: "log4j", version: "1.2.17"
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
         compile group: "com.vdurmont", name: "emoji-java", version: "3.1.3"
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Configuration')
