--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ subprojects {
     tasks.withType(JavaCompile) {
         options.compilerArgs << "-Xlint:all"
         options.compilerArgs << "-Werror"
-    } 
+        options.compilerArgs << "-proc:none"
+    }
 
     findbugs {
         ignoreFailures = false
@@ -55,7 +56,7 @@ subprojects {
 
 project (":TweetWallFX-Configuration") {
     dependencies {
-        compile group: "log4j", name: "log4j", version: "1.2.17"
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
     }
 }
 
@@ -68,7 +69,6 @@ project(":TweetWallFX-Tweet-Impl-Twitter4J") {
     dependencies {
         compile group: "org.twitter4j", name: "twitter4j-core", version: "4.0.6"
         compile group: "org.twitter4j", name: "twitter4j-stream", version: "4.0.6"
-        compile group: "log4j", name: "log4j", version: "1.2.17"
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Tweet-Impl-Twitter4J-OAuth')
         compile project(':TweetWallFX-Configuration')
@@ -78,7 +78,6 @@ project(":TweetWallFX-Tweet-Impl-Twitter4J") {
 project(":TweetWallFX-Core"){
     dependencies {
         compile group: "de.jensd", name: "fontawesomefx", version: "8.9"
-        compile group: "log4j", name: "log4j", version: "1.2.17"
         compile group: "com.vdurmont", name: "emoji-java", version: "3.1.3"
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Configuration')
