Follow up to Update to log4j2. Fixes TweetWallFX/TweetwallFX#154  - fix slf4j backend to log4j2 impl  - adapted 2 more classes to log4j2

--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ project(":TweetWallFX-Controls"){
     dependencies {
          compile group: "javax.cache", name: "cache-api", version: "1.0.0"
          compile group: "org.ehcache", name: "ehcache", version: "3.3.0"
-         compile group: "org.slf4j", name: "slf4j-log4j12", version: "1.7.25"
+         runtime group: "org.apache.logging.log4j", name: "log4j-slf4j-impl", version: "2.9.0"
          compile project(':TweetWallFX-Core')
     }
 }
