--- a/build.gradle
+++ b/build.gradle
@@ -117,6 +117,11 @@ project(":TweetWallFX-Controls"){
          compile group: "javax.cache", name: "cache-api", version: "1.0.0"
          compile group: "org.ehcache", name: "ehcache", version: "3.3.0"
          runtime group: "org.apache.logging.log4j", name: "log4j-slf4j-impl", version: "2.9.0"
+        
+        compile group: "javax.json.bind", name:"javax.json.bind-api", version:"1.0"
+        runtime group: "org.eclipse", name: "yasson", version: "1.0"
+        runtime group: "org.glassfish", name: "javax.json", version: "1.1"
+        
          compile project(':TweetWallFX-Core')
     }
 }
