--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ project(":TweetWallFX-Tweet-Impl-Twitter4J") {
 
 project(":TweetWallFX-Core"){
     dependencies {
-        compile group: "de.jensd", name: "fontawesomefx", version: "8.9"
+        compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-9'
         compile group: "com.vdurmont", name: "emoji-java", version: "3.1.3"
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Configuration')
