--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,8 @@ include ':devoxx'
 project(":devoxx").name = "TweetWallFX-Devoxx"
 include ':devoxx-2015'
 project(":devoxx-2015").name = "TweetWallFX-Devoxx-2015"
+include ':devoxx-api-cfp'
+project(":devoxx-api-cfp").name = "TweetWallFX-Devoxx-API-CFP"
 include ':devoxx-2016'
 project(":devoxx-2016").name = "TweetWallFX-Devoxx-2016"
 include ':devoxx-2017-fr'
