--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,10 @@ include ':devoxx-2017-fr'
 project(':devoxx-2017-fr').name = 'TweetWallFX-Devoxx-2017-FR'
 include ':devoxx-2017-us'
 project(':devoxx-2017-us').name = 'TweetWallFX-Devoxx-2017-US'
+include ':devoxx-2017-be'
+include ':devoxx-2017-be:exhibition'
+project(':devoxx-2017-be:exhibition').name = 'Exhibition'
+project(':devoxx-2017-be').name = 'TweetWallFX-Devoxx-2017-BE'
 include ':netbeans'
 project(":netbeans").name = "TweetWallFX-NetBeans"
 include ':javaone'
