--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ subprojects {
     
     tasks.withType(JavaExec) {
         jvmArgs "-XX:+IgnoreUnrecognizedVMOptions"
-        jvmArgs "--add-modules", "java.xml.bind"
+        jvmArgs "--add-modules java.xml.bind"
     }
 }
 
