provide Client API for Devoxx CFP (#195)
* first shot handling getting the available Events and getting the Event a CFPClient instance is responsible for
refs TweetWallFX/TweetwallFX#165

* next shot handling getting all speakers, a single speaker and a talk
refs TweetWallFX/TweetwallFX#165

* some test enhancements

* fixed typo

* next shot handling getting rooms
refs TweetWallFX/TweetwallFX#165

* track and trackId are completely separate things

* next shot handling getting tracks
refs TweetWallFX/TweetwallFX#165

* next shot handling getting proposalTypes
refs TweetWallFX/TweetwallFX#165

* next shot handling getting schedules
refs TweetWallFX/TweetwallFX#165

* next shot handling getting voting results
refs TweetWallFX/TweetwallFX#165

--- a/build.gradle
+++ b/build.gradle
@@ -285,6 +285,17 @@ project(":TweetWallFX-Generic2D") {
     }
 }
 
+project(':TweetWallFX-Devoxx-API-CFP') {
+    dependencies {
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.+'
+        compile group: 'javax', name: 'javaee-api', version: '8.0'
+        
+        def jerseyVersion = '2.25'
+        runtime group: 'org.glassfish.jersey.core', name: 'jersey-client', version: jerseyVersion
+        runtime group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: jerseyVersion
+    }
+}
+
 project(":TweetWallFX-EmbeddableTest") {
     apply plugin: 'application'
     mainClassName = "Main"
