--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,8 @@ project(':devoxx-2017-fr').name = 'TweetWallFX-Devoxx-2017-FR'
 include ':devoxx-2017-us'
 project(':devoxx-2017-us').name = 'TweetWallFX-Devoxx-2017-US'
 include ':devoxx-2017-be'
+include ':devoxx-2017-be:cfp-impl'
+project(':devoxx-2017-be:cfp-impl').name = 'CFP-Implementation-2017-BE'
 include ':devoxx-2017-be:exhibition'
 project(':devoxx-2017-be:exhibition').name = 'Exhibition'
 project(':devoxx-2017-be').name = 'TweetWallFX-Devoxx-2017-BE'
