--- a/settings.gradle
+++ b/settings.gradle
@@ -56,7 +56,9 @@ include ':devoxx-2017-be:cfp-impl'
 project(':devoxx-2017-be:cfp-impl').name = 'CFP-Implementation-2017-BE'
 include ':devoxx-2017-be:exhibition'
 project(':devoxx-2017-be:exhibition').name = 'Exhibition'
-project(':devoxx-2017-be').name = 'TweetWallFX-Devoxx-2017-BE'
+include ':devoxx-2017-be:cinema'
+project(':devoxx-2017-be:cinema').name = 'Cinema'
+//project(':devoxx-2017-be').name = 'TweetWallFX-Devoxx-2017-BE'
 include ':netbeans'
 project(":netbeans").name = "TweetWallFX-NetBeans"
 include ':javaone'
