--- a/build.gradle
+++ b/build.gradle
@@ -305,50 +305,51 @@ project(':TweetWallFX-Devoxx-API-CFP') {
     }
 }
 
-project(":TweetWallFX-EmbeddableTest") {
-    apply plugin: 'application'
-    mainClassName = "Main"
-
-    tasks.withType(JavaExec) {
-        main mainClassName
-    }
-
-    task('debug', dependsOn: 'classes', type: JavaExec) {
-        classpath sourceSets.main.runtimeClasspath
-        debug = true
-    }
-
-    dependencies {
-        compile project(':TweetWallFX-Embeddable')
-        runtime project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-}
-
-project(":TweetWallFX-Embeddable") {
-    apply plugin: "java"
-    apply plugin: 'cz.kubacki.nbm'
-    
-    dependencies {
-        compile project(':TweetWallFX-2D')
-        compile project(':TweetWallFX-Controls')
-        runtime project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    }
-    
-    task copyToLib(type: Copy) {
-        into "$buildDir/lib"
-        from configurations.runtime
-    }    
-    
-    nbm {
-//        moduleName = "org.tweetwallfx.embeddable"
-
-        friendPackages {
-            add "org.tweetwallfx.embeddable"
-        }
-    }
-
-    tasks.assemble.dependsOn tasks.copyToLib
-}
+// disabled for future reference
+//project(":TweetWallFX-EmbeddableTest") {
+//    apply plugin: 'application'
+//    mainClassName = "Main"
+//
+//    tasks.withType(JavaExec) {
+//        main mainClassName
+//    }
+//
+//    task('debug', dependsOn: 'classes', type: JavaExec) {
+//        classpath sourceSets.main.runtimeClasspath
+//        debug = true
+//    }
+//
+//    dependencies {
+//        compile project(':TweetWallFX-Embeddable')
+//        runtime project(':TweetWallFX-Tweet-Impl-Twitter4J')
+//    }
+//}
+//
+//project(":TweetWallFX-Embeddable") {
+//    apply plugin: "java"
+//    apply plugin: 'cz.kubacki.nbm'
+//    
+//    dependencies {
+//        compile project(':TweetWallFX-2D')
+//        compile project(':TweetWallFX-Controls')
+//        runtime project(':TweetWallFX-Tweet-Impl-Twitter4J')
+//    }
+//    
+//    task copyToLib(type: Copy) {
+//        into "$buildDir/lib"
+//        from configurations.runtime
+//    }    
+//    
+//    nbm {
+////        moduleName = "org.tweetwallfx.embeddable"
+//
+//        friendPackages {
+//            add "org.tweetwallfx.embeddable"
+//        }
+//    }
+//
+//    tasks.assemble.dependsOn tasks.copyToLib
+//}
 
 description = 'TweetWallFX'
 
