--- a/settings.gradle
+++ b/settings.gradle
@@ -41,7 +41,9 @@ include ':javaone'
 project(":javaone").name = "TweetWallFX-JavaOne"
 include ':generic2d'
 project(":generic2d").name = "TweetWallFX-Generic2D"
-include ':embeddable'
-project(":embeddable").name = "TweetWallFX-Embeddable"
-include ':embeddabletest'
-project(":embeddabletest").name = "TweetWallFX-EmbeddableTest"
+
+// disabled subproject for future reference
+//include ':embeddable'
+//project(":embeddable").name = "TweetWallFX-Embeddable"
+//include ':embeddabletest'
+//project(":embeddabletest").name = "TweetWallFX-EmbeddableTest"
