--- a/build.gradle
+++ b/build.gradle
@@ -22,19 +22,21 @@ apply plugin: 'build-dashboard'
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'idea'
     apply plugin: 'com.github.spotbugs'
     apply plugin: 'jacoco'
     apply plugin: 'eclipse'
     
-    group = "org.tweetwallfx"
+    group = 'org.tweetwallfx'
+    version = '1.0'
     
     repositories {
         jcenter()
     }
+    
     dependencies {
-        testCompile 'junit:junit:4.11'
+        testCompile group: 'junit', name: 'junit', version: versionJUnit
     }
-    version = '1.0'
     
     jar {
         manifest.attributes provider: 'gradle'
@@ -47,7 +49,7 @@ subprojects {
     }
     
     spotbugs {
-         ignoreFailures = false
+        ignoreFailures = false
     }
 
     tasks.withType(com.github.spotbugs.SpotBugsTask) {
@@ -70,7 +72,7 @@ subprojects {
 
 project (":TweetWallFX-Configuration") {
     dependencies {
-        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
     }
 }
 
@@ -81,8 +83,8 @@ project(":TweetWallFX-Tweet-API") {
 
 project(":TweetWallFX-Tweet-Impl-Twitter4J") {
     dependencies {
-        compile group: "org.twitter4j", name: "twitter4j-core", version: "4.0.6"
-        compile group: "org.twitter4j", name: "twitter4j-stream", version: "4.0.6"
+        compile group: 'org.twitter4j', name: 'twitter4j-core', version: versionTwitter4j
+        compile group: 'org.twitter4j', name: 'twitter4j-stream', version: versionTwitter4j
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Tweet-Impl-Twitter4J-OAuth')
         compile project(':TweetWallFX-Configuration')
@@ -114,15 +116,15 @@ project(":TweetWallFX-3D"){
 
 project(":TweetWallFX-Controls"){
     dependencies {
-         compile group: "javax.cache", name: "cache-api", version: "1.0.0"
-         compile group: "org.ehcache", name: "ehcache", version: "3.3.0"
-         runtime group: "org.apache.logging.log4j", name: "log4j-slf4j-impl", version: "2.9.0"
+        compile group: "javax.cache", name: "cache-api", version: "1.0.0"
+        compile group: "org.ehcache", name: "ehcache", version: "3.3.0"
+        runtime group: "org.apache.logging.log4j", name: "log4j-slf4j-impl", version: versionLog4j
         
         compile group: "javax.json.bind", name:"javax.json.bind-api", version:"1.0"
         runtime group: "org.eclipse", name: "yasson", version: "1.0"
         runtime group: "org.glassfish", name: "javax.json", version: "1.1"
         
-         compile project(':TweetWallFX-Core')
+        compile project(':TweetWallFX-Core')
     }
 }
 
@@ -224,9 +226,9 @@ project(":TweetWallFX-Devoxx-2017-FR") {
 project(":TweetWallFX-Devoxx-2017-BE:CFP-Implementation-2017-BE") {
     dependencies {
         compile project(':TweetWallFX-Devoxx-API-CFP')
-        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.0'
+        compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
         
-        runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
+        runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
     }
 }
 
@@ -299,9 +301,8 @@ project(':TweetWallFX-Devoxx-API-CFP') {
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.+'
         compile group: 'javax', name: 'javaee-api', version: '8.0'
         
-        def jerseyVersion = '2.25'
-        runtime group: 'org.glassfish.jersey.core', name: 'jersey-client', version: jerseyVersion
-        runtime group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: jerseyVersion
+        runtime group: 'org.glassfish.jersey.core', name: 'jersey-client', version: versionJersey
+        runtime group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: versionJersey
     }
 }
 
