now using JSON as configuration format instead of Properties files. * loading structured data and converting the raw data of a configuration data key into POJOs if there is a converter registered for that key. * added some retrieval methods to Configuration for easier use * converted existing configuration files into the new format fixes TweetWallFX/TweetwallFX#178

--- a/devoxx-api-cfp/build.gradle
+++ b/devoxx-api-cfp/build.gradle
@@ -23,7 +23,7 @@
  */
 
 dependencies {
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.+'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versionJackson
     compile group: 'javax', name: 'javaee-api', version: '8.0'
         
     runtime group: 'org.glassfish.jersey.core', name: 'jersey-client', version: versionJersey
