--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,10 @@
 
 # artifact versions
 versionJUnit=4.11
+versionJackson=2.+
+versionJasson=1.0
+versionJavaxJson=1.1
+versionJavaxJsonBindAPI=1.0
 versionJersey=2.25
 versionLog4j=2.9.0
 versionTwitter4j=4.0.6
