--- a/controls/build.gradle
+++ b/controls/build.gradle
@@ -27,9 +27,9 @@ dependencies {
     compile group: 'org.ehcache', name: 'ehcache', version: '3.3.0'
     runtime group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: versionLog4j
         
-    compile group: 'javax.json.bind', name:'javax.json.bind-api', version:'1.0'
-    runtime group: 'org.eclipse', name: 'yasson', version: '1.0'
-    runtime group: 'org.glassfish', name: 'javax.json', version: '1.1'
+    compile group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
+    runtime group: 'org.eclipse', name: 'yasson', version: versionJasson
+    runtime group: 'org.glassfish', name: 'javax.json', version: versionJavaxJson
         
     compile project(':TweetWallFX-Core')
 }
