--- a/devoxx-2017-be/cinema/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-be/cinema/src/main/resources/tweetwallConfig.json
@@ -1,4 +1,12 @@
-tweetwall.twitter.query=#devoxx 
-tweetwall.title=The JavaFX Tweetwall for Devoxx 2017!
-tweetwall.stylesheet=tweetwall.css
-tweetwall.twitter.tweetModeExtended=true
+{
+    "twitter" : {
+        "extendedMode" : true
+    },
+    "tweetwall" : {
+        "query" : "#devoxx",
+        "title" : "The JavaFX Tweetwall for Devoxx 2017!",
+        "stylesheetResources" : [
+            "tweetwall.css"
+        ]
+    }
+}
