all interaction with the RestCallHelper now Optional. They contain co… (#275)
* all interaction with the RestCallHelper now Optional. They contain content if the REST call succeeded and produced a Response or in the case of reading the content from the Response it has a Status Code in the 200-Range.
fixes TweetWallFX/TweetwallFX#265

* corrected optional mapping
refs TweetWallFX/TweetwallFX#265

* corrected configuration for log4j-core dependency
refs TweetWallFX/TweetwallFX#265

* using function constructor call to create SessionData
refs TweetWallFX/TweetwallFX#265

--- a/devoxx-api-cfp/build.gradle
+++ b/devoxx-api-cfp/build.gradle
@@ -25,7 +25,9 @@
 dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versionJackson
     compile group: 'javax', name: 'javaee-api', version: '8.0'
-        
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
+    
+    runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
     runtime group: 'org.glassfish.jersey.core', name: 'jersey-client', version: versionJersey
     runtime group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: versionJersey
 }
