Added ToString helper class creating user friendly String representing a parameter map. This is useful when attempting to create a String for the toString() method. Added tests for the utility. fixes TweetWallFX/TweetwallFX#288

--- a/settings.gradle
+++ b/settings.gradle
@@ -38,6 +38,8 @@ include ':core'
 project(":core").name = "TweetWallFX-Core"
 include ':2d'
 project(":2d").name = "TweetWallFX-2D"
+include ':util'
+project(":util").name = "TweetWallFX-Utility"
 
 include ':devoxx'
 project(":devoxx").name = "TweetWallFX-Devoxx"
