Using the Utility methods in ToString when creating the String to be returned by the toString() method

--- a/config/build.gradle
+++ b/config/build.gradle
@@ -25,6 +25,7 @@
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
     compile group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
+    compile project(':TweetWallFX-Utility')
     
     runtime group: 'org.eclipse', name: 'yasson', version: versionJasson
     runtime group: 'org.glassfish', name: 'javax.json', version: versionJavaxJson
