Manual conversion from object to JSON and back is now done via JsonDataConverter. Which uses Jackson as the implementation used for the conversion. fixes TweetWallFX/TweetwallFX#299

--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,6 +23,5 @@
  */
 
 dependencies {
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
-    compile project(':TweetWallFX-Utility')
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versionJackson
 }
