using json-bind-api instead of jackson. fixes TweetWallFX/TweetwallFX#299

--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,5 +23,8 @@
  */
 
 dependencies {
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versionJackson
+    compile group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
+    
+    runtime group: 'org.eclipse', name: 'yasson', version: versionJasson
+    runtime group: 'org.glassfish', name: 'javax.json', version: versionJavaxJson
 }
