modified tweetwallConfig.json to be compliant to POJO

--- a/devoxx-2015/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2015/src/main/resources/tweetwallConfig.json
@@ -2,8 +2,6 @@
     "tweetwall" : {
         "query" : "#devoxx",
         "title" : "The JavaFX Tweetwall for Devoxx 2015!",
-        "stylesheetResources" : [
-            "tweetwall.css"
-        ]
+        "stylesheetResource" : "tweetwall.css"
     }
 }
