--- a/devoxx-2016/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2016/src/main/resources/tweetwallConfig.json
@@ -2,8 +2,6 @@
     "tweetwall" : {
         "query" : "#devoxx",
         "title" : "The JavaFX Tweetwall for Devoxx 2016!",
-        "stylesheetResources" : [
-            "tweetwall.css"
-        ]
+        "stylesheetResource" : "tweetwall.css"
     }
 }
