--- a/devoxx-2017-fr/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-fr/src/main/resources/tweetwallConfig.json
@@ -2,8 +2,6 @@
     "tweetwall" : {
         "query" : "#devoxx OR #devoxxfr",
         "title" : "The JavaFX Tweetwall for Devoxx FR 2017!",
-        "stylesheetResources" : [
-            "tweetwall.css"
-        ]
+        "stylesheetResource" : "tweetwall.css"
     }
 }
