--- a/devoxx/src/main/resources/tweetwallConfig.json
+++ b/devoxx/src/main/resources/tweetwallConfig.json
@@ -2,8 +2,6 @@
     "tweetwall" : {
         "query" : "#devoxx",
         "title" : "The JavaFX Tweetwall for Devoxx!",
-        "stylesheetResources" : [
-            "devoxx.css"
-        ]
+        "stylesheetResource" : "devoxx.css"
     }
 }
