--- a/netbeans/src/main/resources/tweetwallConfig.json
+++ b/netbeans/src/main/resources/tweetwallConfig.json
@@ -2,8 +2,6 @@
     "tweetwall" : {
         "query" : "#netbeans OR #netbeansday",
         "title" : "The JavaFX Tweetwall for NetBeans Day!",
-        "stylesheetResources" : [
-            "netbeans.css"
-        ]
+        "stylesheetResource" : "netbeans.css"
     }
 }
