--- a/devoxx-2017-be/exhibition/src/main/resources/tweetwallConfig.json
+++ b/devoxx-2017-be/exhibition/src/main/resources/tweetwallConfig.json
@@ -5,8 +5,6 @@
     "tweetwall" : {
         "query" : "#devoxx",
         "title" : "The JavaFX Tweetwall for Devoxx 2017!",
-        "stylesheetResources" : [
-            "tweetwall.css"
-        ]
+        "stylesheetResource" : "tweetwall.css"
     }
 }
