Initial VDZ project setup

--- a/build.gradle
+++ b/build.gradle
@@ -126,3 +126,4 @@ task ('runDevoxx2017BE-Exhibition', dependsOn: ':devoxx-2017-be:Exhibition:run')
 task ('runDevoxx2017BE-Cinema', dependsOn: ':devoxx-2017-be:Cinema:run')
 task ('runJavaOne', dependsOn: ':TweetWallFX-JavaOne:run')
 task ('runNetBeans', dependsOn: ':TweetWallFX-NetBeans:run')
+task ('runVDZ', dependsOn: ':TweetWallFX-Voxxed-Days-Zurich:run')
